1999-09-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * compiler.lsp (c-GLOBAL-FUNCTION-CALL): When pushing forms onto
          *package-tasks*, quote the arguments only when necessary.

1999-09-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * io.d (SET-DISPATCH-MACRO-CHARACTER): Call up_case on sub_char.
          (GET-DISPATCH-MACRO-CHARACTER): Likewise.

1999-09-12  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (UnbufferedStreamLow_pushfront_byte): Increment status
          by 1, not by 2.
          (rd_ch_terminal3): Before calling readline(), stuff the pre-read
          byte into readline's input buffer.

1999-09-12  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * aclocal.m4 (CL_CONNECT): For namelen, also try the type `socklen_t'.
          Needed on 64-bit Solaris.

1999-09-12  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (iconv_wcslen, iconv_wcstombs): Call end_system_call()
          before signalling an error.

1999-09-12  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (fehler_uint8): Declare always, not only ifdef HAVE_FFI.
        * error.d (fehler_uint8): Define always, not only ifdef HAVE_FFI.

        * intelem.d (Q_to_I): Define if defined(intQsize), not only if
          defined(HAVE_FFI) && defined(intQsize). It's needed by DF_to_I.

1999-09-12  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * io.d (klammer_auf, klammer_zu, justify_start, justify_space,
           justify_end_eng, justify_end_weit, indent_start, indent_end,
           indentprep_start, indentprep_end, pr_enter1): Test for
          builtin_stream_p before accessing ->strmtype.
        * encoding.d (SYSTEM::SET-TERMINAL-ENCODING): Likewise.
        * stream.d (CONCATENATED-STREAM-STREAMS, TWO-WAY-STREAM-INPUT-STREAM,
           TWO-WAY-STREAM-OUTPUT-STREAM, ECHO-STREAM-INPUT-STREAM,
           ECHO-STREAM-OUTPUT-STREAM): Likewise.